# mlops_hw2_ilia_zubov

./: .dockerignore  Dockerfile  Makefile  README.md  client.py  main.py  pyproject.toml
models/: model.pkl
protos/: model.proto
server/: __init__.py  server.py  settings.py
server/pb/: model_pb2.py  model_pb2_grpc.py
